@@ -70,10 +70,8 @@ const SHOW_IMAGE_ACTION       = 54;
 const PQ_SORT_ACTION          = 55;
 const PLAYLIST_SORT_ACTION    = 56;
 const PQ_SAVE_ACTION          = 57;
-const PQ_CLEAR_UPCOMMING_ACTION = 58;
-const PQ_CLEAR_PLAYED_ACTION = 59;
 
-const HIDE_FOR_PARTY = new Set([PLAY_ACTION, PLAY_ALBUM_ACTION, PLAY_ALL_ACTION, MORE_ACTION, MORE_LIB_ACTION, RENAME_ACTION, REMOVE_ACTION, EDIT_ACTION, ADD_FAV_ACTION, DELETE_ACTION, ADD_TO_FAV_ACTION, REMOVE_FROM_FAV_ACTION, SELECT_ACTION, RATING_ACTION, ADD_FAV_FOLDER_ACTION, DELETE_FAV_FOLDER_ACTION, MOVE_FAV_TO_PARENT_ACTION, UNSUB_PODCAST_ACTION, MOVE_HERE_ACTION, INSERT_ALL_ACTION, ADD_TO_PLAYLIST_ACTION, REMOVE_DUPES_ACTION, ADV_SEARCH_ACTION, SAVE_VLIB_ACTION, DOWNLOAD_ACTION, PLAY_DISC_ACTION, PLAY_PLAYLIST_ACTION, PQ_SORT_ACTION, PLAYLIST_SORT_ACTION, PQ_SAVE_ACTION, PQ_CLEAR_UPCOMMING_ACTION, PQ_CLEAR_PLAYED_ACTION]);
+const HIDE_FOR_PARTY = new Set([PLAY_ACTION, PLAY_ALBUM_ACTION, PLAY_ALL_ACTION, MORE_ACTION, MORE_LIB_ACTION, RENAME_ACTION, REMOVE_ACTION, EDIT_ACTION, ADD_FAV_ACTION, DELETE_ACTION, ADD_TO_FAV_ACTION, REMOVE_FROM_FAV_ACTION, SELECT_ACTION, RATING_ACTION, ADD_FAV_FOLDER_ACTION, DELETE_FAV_FOLDER_ACTION, MOVE_FAV_TO_PARENT_ACTION, UNSUB_PODCAST_ACTION, MOVE_HERE_ACTION, INSERT_ALL_ACTION, ADD_TO_PLAYLIST_ACTION, REMOVE_DUPES_ACTION, ADV_SEARCH_ACTION, SAVE_VLIB_ACTION, DOWNLOAD_ACTION, PLAY_DISC_ACTION, PLAY_PLAYLIST_ACTION, PQ_SORT_ACTION, PLAYLIST_SORT_ACTION, PQ_SAVE_ACTION]);
 
 var ACTIONS=[
     {cmd:"play",         icon:"play_circle_outline"},
@@ -140,9 +138,7 @@ var ACTIONS=[
     {cmd:"show-img",     icon:"photo"},
     {cmd:"pq-sort",      icon:"sort"},
     {cmd:"playlist-sort",icon:"sort"},
-    {cmd:"pq-save",      icon:"save"},
-    {cmd:"pq-clearup",   icon:""},
-    {cmd:"pq-clearplayed", icon:""}
+    {cmd:"pq-save",      icon:"save"}
 ];
 
 function updateActionStrings() {
@@ -215,7 +211,5 @@ function updateActionStrings() {
     ACTIONS[PLAYLIST_SORT_ACTION].title=i18n("Sort tracks");
     ACTIONS[PQ_SAVE_ACTION].title=i18n("Save queue");
     ACTIONS[PQ_SAVE_ACTION].key=LMS_SAVE_QUEUE_KEYBOARD;
-    ACTIONS[PQ_CLEAR_PLAYED_ACTION].title=i18n("Remove played tracks");
-    ACTIONS[PQ_CLEAR_UPCOMMING_ACTION].title=i18n("Clear upcoming");
 }
 
