@@ -19,7 +19,8 @@
 16. Only show library last update date if valid.
 17. Don't remove icons in favourites just because they are all the same.
 18. Fix 'Play next' when invoked from header of multi-disc album.
-20. Add 'Removed played tracks' and 'Clear upcoming' to queue actions.
+20. When prompting to clear queue ask if all tracks, upcoming, or previous
+    should be removed.
 
 3.2.4
 -----
